# vetflow-platform

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_tenants_and_users.py  0002_create_owners_and_patients.py  0003_add_estimated_age_to_patients.py  0004_create_consultations.py  0005_create_exams.py  0006_patient_detail_records.py  0007_structured_consultations_v2.py  0008_add_user_traceability.py  0009_add_detail_record_traceability.py  0010_clinical_file_storage.py  0011_create_appointments.py  0012_add_clinic_profile_fields.py  0013_add_clinic_logo_object_path.py  0014_create_follow_ups.py  0015_create_inventory.py  0016_add_inventory_timestamp_defaults.py  0017_consultation_med_inventory.py  0018_add_timezone_to_tenants.py  0019_consultation_follow_up_link.py  0020_add_consultation_diagnostic_results.py  0021_add_patient_profile_photo.py  0022_add_consultation_ai_summary.py  0023_add_inventory_item_purchase_sale_tax_rates.py  0024_add_user_role.py  0025_consultation_six_step_workflow.py
apps/api/app/: main.py  main.py:Zone.Identifier
apps/api/app/api/: admin_users.py  ai.py  appointments.py  auth.py  clinic.py  consultations.py  dashboard.py  debug.py  exams.py  file_references.py  follow_ups.py  inventory.py  owners.py  patients.py  preventive_care.py  search.py
apps/api/app/core/: config.py  errors.py  firebase.py  roles.py  tenant.py
apps/api/app/db/: session.py
(+208 files in other folders)
