[project]
name = "vetflow-api"
version = "0.1.0"
description = "Vetflow Platform backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "firebase-admin",
    "google-cloud-storage",
    "python-multipart==0.0.20",
    "reportlab==4.2.5",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

# App project (imported as `app.*`), not a distributable package —
# uv won't try to build/install it, solo gestiona el entorno y las deps.
[tool.uv]
package = false
